# serializer version: 1
# name: test_decode_rpc_payload[get_dnd]
  20002
# ---
# name: test_decode_rpc_payload[get_dnd].1
  '''
  {
    "start_hour": 22,
    "start_minute": 0,
    "end_hour": 8,
    "end_minute": 0,
    "enabled": 1
  }
  '''
# ---
# name: test_decode_rpc_payload[get_status]
  20001
# ---
# name: test_decode_rpc_payload[get_status].1
  '''
  {
    "msg_ver": 2,
    "msg_seq": 515,
    "state": 8,
    "battery": 100,
    "clean_time": 5405,
    "clean_area": 91287500,
    "error_code": 0,
    "map_present": 1,
    "in_cleaning": 0,
    "in_returning": 0,
    "in_fresh_state": 1,
    "lab_status": 1,
    "water_box_status": 0,
    "fan_power": 106,
    "dnd_enabled": 1,
    "map_status": 3,
    "is_locating": 0,
    "lock_status": 0,
    "water_box_mode": 204,
    "distance_off": 0,
    "water_box_carriage_status": 0,
    "mop_forbidden_enable": 0,
    "unsave_map_reason": 4,
    "unsave_map_flag": 0
  }
  '''
# ---
